# MultiOmicsCellSim

./: .gitignore  README.md  pyproject.toml  requirements.txt  voronoi.ipynb
dev/: GEM_integration.ipynb  cpm.ipynb  cpm_like_torch_impl.ipynb  reaction_diffusion.ipynb  scratch.ipynb  voronoi.ipynb
examples/: Synthetic_Cell_Simulation_Voronoi_CPM.ipynb  example.ipynb
multiomicscellsim/: Synthetic_Cell_Simulation_Voronoi_CPM.ipynb  config.py  entities.py  simulator.py  tissue_generator.py
multiomicscellsim/cpm/: constraints.py  cpmentities.py  simulation.py
multiomicscellsim/patterns/: config.py  patterns.json  reaction_diffusion.py
multiomicscellsim/torch_cpm/: config.py  constraints.py  gridutils.py  simulation.py
multiomicscellsim/utils/: geometry.py
scripts/: generate_dataset.py
